[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Settings/Infopopup.gd" type="Script" id=1]
[ext_resource path="res://art/settings/Player Round/robo.png" type="Texture" id=2]
[ext_resource path="res://art/settings/purple popup.png" type="Texture" id=3]
[ext_resource path="res://art/MainMenu/Cancel.png" type="Texture" id=4]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://art/PlayerSelection/Patterns/ryu.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 5 )

[node name="Infopopup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.901961 )

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.4
margin_top = -200.1
margin_right = 150.4
margin_bottom = 200.1

[node name="playericon" type="TextureRect" parent="Control"]
margin_left = 83.3344
margin_top = -22.0819
margin_right = 349.334
margin_bottom = 243.918
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
stretch_mode = 1

[node name="Container" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -148.128
margin_top = -152.864
margin_right = 444.872
margin_bottom = 708.136
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 3 )
stretch_mode = 1
__meta__ = {
"_edit_group_": true
}

[node name="Button" type="Button" parent="Container"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -104.0
margin_top = -56.0
margin_right = 2.99976
margin_bottom = 45.0
rect_scale = Vector2( 1.2, 1.2 )
focus_mode = 0
enabled_focus_mode = 0
icon = ExtResource( 4 )
flat = true

[node name="player_name" type="Label" parent="Container"]
anchor_left = 0.5
anchor_top = 0.2
anchor_right = 0.5
anchor_bottom = 0.2
margin_left = -70.5
margin_top = -10.0
margin_right = 70.5
margin_bottom = -117.2
custom_fonts/font = SubResource( 1 )
text = "Sakuraa"
align = 1
valign = 1

[node name="pattern" type="TextureRect" parent="Container"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -104.822
margin_top = 244.333
margin_right = 456.178
margin_bottom = 604.333
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="description2" type="Label" parent="Container"]
visible = false
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.95
margin_left = -3.8147e-06
margin_top = 243.788
margin_bottom = 54.0381
custom_fonts/font = SubResource( 1 )
text = "Pokémon is a series of video games developed by Game Freak and published by Nintendo and The Pokémon Company as part of the Pokémon media franchise.The Pokémon Company as Pokémon 
"
valign = 1
autowrap = true

[node name="description" type="RichTextLabel" parent="Container"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -254.5
margin_top = -436.0
margin_right = 264.5
margin_bottom = -38.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Pokémon is a series of video games developed by Game Freak and published by Nintendo and The Pokémon Company as part of the Pokémon media franchise.The Pokémon Company as Pokémon"

[connection signal="button_down" from="Container/Button" to="." method="_on_Button_button_down"]
[connection signal="button_up" from="Container/Button" to="." method="_on_Button_button_up"]
[connection signal="pressed" from="Container/Button" to="." method="_on_Button_pressed"]
